[tool.poetry]
name = "gkx"
version = "0.1.0"
description = "Green-Kubo Calculations with JAX"
authors = ["Marcel Langer <dev@marcel.science>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
# glp =  { git = "https://github.com/sirmarcel/glp.git", branch = "main" }
comms =  { git = "https://github.com/sirmarcel/comms.git", branch = "main" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gkx = 'gkx.cli:gkx'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
